[gd_scene load_steps=3 format=3 uid="uid://tf1dv07rmbhp"]

[ext_resource type="Script" uid="uid://cd6pw23ejq4ty" path="res://src/ui/Settings/SettingsMenu/settings_menu.gd" id="1_a524d"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m42fp"]
modulate_color = Color(0.556953, 0.556953, 0.556953, 1)

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a524d")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.690196)

[node name="Panel" type="Panel" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_m42fp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.446
anchor_right = 0.5
anchor_bottom = 0.446
offset_left = -93.0
offset_top = -68.008
offset_right = 99.0
offset_bottom = 67.992
grow_horizontal = 2
grow_vertical = 2

[node name="video" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="audio" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="VBoxContainer/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="VBoxContainer/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
